--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   device_preview: ^1.0.0
   flutter:
-    sdk: flutter
+    sdk: flutterflu
 
 
   # The following adds the Cupertino Icons font to your application.
